# alfbote

./: .gitignore  LICENSE  LICENSE.txt  README.md  alfbote.service  imagegen-requirements.txt  install-pytorch-rocm.sh  pyproject.toml
src/alfbote/: __about__.py  __main__.py  bots.py  chatgen.py  emojis.py  imagegen.py  people.py  utils.py
src/alfbote/llamacpp/: chat.py  common.py  low_level_api_chat_cpp.py  util.py
tests/: __init__.py
