[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alfbote"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "ianwal", email = "52143079+ianwal@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "py-cord",
  "py-cord[speed]", # This is for performance, but requires libffni, libnacl, and Python dev headers (python3-dev on ubuntu)
  "python-dotenv",
  "rich",
  "mediapy",
  "yt_dlp", # For music
]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
rocm = ["torch @ https://download.pytorch.org/whl/rocm5.4.2", "torchvision @ https://download.pytorch.org/whl/rocm5.4.2", "torchaudio @ https://download.pytorch.org/whl/rocm5.4.2"]
imagegen = ["diffusers", "transformers", "accelerate", "mediapy", "triton", "scipy", "ftfy", "spacy==3.4.4"] # Optional: xformers==0.0.16rc425 Does not work with ROCM but may speed up nvidia
chatgen = ["llama-cpp-python"]
chattts = ["TTS", "py-cord[voice]", "alfbote[chatgen]"]
all = ["alfbote[imagegen, chatgen, chattts]"]
allrocm = ["alfbote[rocm, all]"]

[project.urls]
Documentation = "https://github.com/unknown/alfbote#readme"
Issues = "https://github.com/unknown/alfbote/issues"
Source = "https://github.com/unknown/alfbote"

[tool.hatch.version]
path = "src/alfbote/__about__.py"

[tool.black]
target-version = ["py310", "py311"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {"tests/**/*" = ["PLR2004", "S101", "TID252"]}

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"
